--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,13 @@
 *.zip
 *.tar.gz
 *.rar
+*.DS_Store
+'#' Ignore objects and archives.
+
+*.[oa]
+.idea/
+.target/
+.out/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
